--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <dependency>
             <groupId>net.sourceforge.tess4j</groupId>
             <artifactId>tess4j</artifactId>
-            <version>4.4.1</version>
+            <version>3.4.8</version>
         </dependency>
         <dependency>
             <groupId>postgresql</groupId>
@@ -41,6 +41,10 @@
             <artifactId>httpclient</artifactId>
             <version>4.5.10</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.jdesktop</groupId>
+            <artifactId>beansbinding</artifactId>
+            <version>1.2.1</version>
+        </dependency>
     </dependencies>
 </project>
